# pro-zbrojak

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PRD.md  README.md  app.py  docker-compose.yaml  docker-compose.yml  parse_pdf.py  pyproject.toml  requirements-runtime.txt  run.bat  run.sh  start.bat  start.command
.github/workflows/: tests.yml
.nicegui/: storage-user-32eb6a26-95e9-42d9-a42f-9f02c4068a6d.json  storage-user-5330bf63-1324-4197-b44f-53b7c4cf576e.json  storage-user-e940bad5-a0ba-438e-adfd-a294705608a5.json
data/: README.md  questions.json
docs/: index.html  o-zkousce.md  otazky.html  porovnani.html  prirucka.html
scripts/: gen_comparison_html.py  gen_questions_html.py  generate_mindmap.py  rename_images_to_qnum.py
src/: auth.py  paths.py
src/db/: questions.py  store.py
src/export/: claude_md.py
src/learning/: heatmap.py  srs.py
src/parser/: models.py
src/ui/: components.py  icons.py  layout.py  quiz.py  theme.py
src/ui/pages/: __init__.py  admin.py  dashboard.py  exam.py  export.py  marathon.py  mastery.py  practice.py  settings.py  srs.py  study.py
tests/: test_all_answers_vs_pdf.py  test_db.py  test_export.py  test_icons_render.py  test_images.py  test_no_emoji_in_ui.py  test_parser_cross_validation.py  test_parser_invariants.py  test_parser_known_questions.py  test_performance.py  test_questions_integrity.py  test_responsive.py  test_responsive_gallery.py  test_srs.py  test_ui_e2e.py  test_ui_icons.py  test_ui_interactions.py
